--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -145,19 +145,15 @@
               <div class="form-row tm-search-form-row">
                 <div class="form-group tm-form-element location-main">
                   <img src="../user/img/icons/location.png" class="tm-form-element-icon" alt="Icon Location" />
-                  <input name="city" type="text" class="form-control first-child" id="city" name="city"
-                    placeholder="Lokasyon Girin" />
+                  <input name="city" type="text" class="form-control first-child" id="city" name="city" placeholder="Lokasyon Girin" />
                 </div>
                 <div class="form-group tm-form-element date">
                   <img src="../user/img/icons/calendar.png" class="tm-form-element-icon" alt="Icon Calendar" />
-                  <input name="check-in" type="date" class="form-control date" id="inputCheckIn"
-                    placeholder="Diyaliz Tarihinizi Seçiniz" />
-                  <img src="../user/img/icons/down.png" class="tm-form-element-icon-small icon-down dateicon"
-                    alt="Icon Down" />
+                  <input name="check-in" type="date" class="form-control date" id="inputCheckIn" placeholder="Diyaliz Tarihinizi Seçiniz" />
+                  <img src="../user/img/icons/down.png" class="tm-form-element-icon-small icon-down dateicon" alt="Icon Down" />
                 </div>
                 <div class="form-group tm-form-element search">
-                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2"></i> <span
-                      key="centerFind">Diyaliz Bul</span></button>
+                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2 p-0"></i><span key="centerFind">Diyaliz Bul</span></button>
                 </div>
               </div>
             </form>
