--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -58,9 +58,8 @@
               </div>
             </div>
           </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+            aria-expanded="false" aria-label="Toggle navigation"><i class="bi bi-list"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
@@ -139,8 +138,7 @@
           <div
             class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-auto mr-auto ie-container-width-fix text-center tm-header-content">
             <div key="centerFindSearch" class="tm-header-title pr-5 px-5">Aradığınız diyaliz merkezini bulun</div>
-            <div key="centerEasy" class="tm-header-text mt-2 pr-5 px-5">Diyaliz merkezi bulmanın en hızlı ve en kolay
-              yolu</div>
+            <div key="centerEasy" class="tm-header-text mt-2 pr-5 px-5">Diyaliz merkezi bulmanın en kolay yolu</div>
             <form action="/clinic/clinic-list" method="GET" class="tm-search-form tm-section-pad-2">
               <div class="form-row tm-search-form-row">
                 <div class="form-group tm-form-element location-main">
@@ -153,7 +151,7 @@
                   <img src="../user/img/icons/down.png" class="tm-form-element-icon-small icon-down dateicon" alt="Icon Down" />
                 </div>
                 <div class="form-group tm-form-element search">
-                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2 p-0"></i><span key="centerFind">Diyaliz Bul</span></button>
+                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2 p-0"></i><span key="centerFind">Diyaliz Merkezinizi Bulun</span></button>
                 </div>
               </div>
             </form>
@@ -170,7 +168,7 @@
                 </div>
                 <div class="col col-lg-4 text-center">
                   <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" />
-                    <span key="cancelEasy"> Rezervasyon iptal kolaylığı</span>
+                    <span key="cancelEasy">Kolay rezervasyon iptali</span>
                   </h6>
                 </div>
               </div>
