--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -313,7 +313,7 @@
           <img src="../user/img/icons/quote-bottom.png" alt="Quote Bottom" class="quote-icon-bottom" />
         </div>
         <div class="profiles">
-          <div class="customer-count" key="thereadCustomer">167 Mutlu Hasta</div>
+          <div class="customer-count mt-3" key="thereadCustomer">167 Mutlu Hasta</div>
           <img src="../user/img/profiles/profile2.png" alt="Profile 2" />
           <img src="../user/img/profiles/profile3.png" class="profile3" alt="Profile 3" />
           <img src="../user/img/profiles/profile4.png" class="profile4" alt="Profile 4" />
@@ -474,17 +474,25 @@
           40+ ülkede yer alan 10000’nin üzerinde diyaliz merkezi ve kliniğinde, 20+ dilde hizmet alarak kolayca ve güvenli şekilde diyaliz rezervasyonunuzu <span class="tm-color-second tm-font-semibold">Dialysing<span class="tm-color-primary">.com</span></span> ile yapabilirsiniz
         </p>
         <div class="tm-center">
-          <div class="circle">
+          <div class="circle-content m-2">
             <img src="../user/img/icons/map.png" alt="Icon Map" />
+            <div class="clinic-number">40+</div>
+            <div class="clinic-prop">Ülke</div>
           </div>
-          <div class="circle">
+          <div class="circle-content m-2">
             <img src="../user/img/icons/language.png" alt="Icon Language" />
+            <div class="clinic-number">20+</div>
+                <div class="clinic-prop">Dil</div>
           </div>
-          <div class="circle">
+          <div class="circle-content m-2">
             <img src="../user/img/icons/hospital.png" alt="Icon Hospital" />
+            <div class="clinic-number">10+</div>
+                <div class="clinic-prop">Klinik</div>
           </div>
-          <div class="circle">
+          <div class="circle-content m-2">
             <img src="../user/img/icons/hospital-2.png" alt="Icon Hospital 2" />
+            <div class="clinic-number">12</div>
+                <div class="clinic-prop">Dernek</div>
           </div>
         </div>
       </div>
