--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -227,7 +227,7 @@
                   <div class="title"><%- element.companyInformation.companyName %></div>
                   <div class="tm-display-flex">
                     <div class="text">Arama yaptığınız konumdan 5 km uzaklıkta.</div>
-                    <div class="span-text">Öne Çıkan Merkez</div>
+                    <div class="span-text"> Öne Çıkan Merkez</div>
                   </div>
                 </div>
                 <div class="clinic-center-points">
@@ -255,7 +255,7 @@
                   </div>
                 </div>
                 <div class="right">
-                  <i class="fa fa-heart clicked"></i>
+                  <!-- <i class="fa fa-heart clicked"></i> -->
                   <div class="clinic-center-brands">
                     <img src="../user/img/brands/JCI.png" alt="Brand JCI" />
                     <img src="../user/img/brands/ISO.png" alt="Brand ISO" />
