change label name and is on clinic detail

--- a/src/views/clinic-panel/pages/add-clinic/clinic-detail.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-detail.ejs
@@ -84,56 +84,56 @@
             <div class="form-box">
               <div class="title">Tesis İçi İmkanlar</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Tekerlekli Sandalye Kullanım" name="centerServices" id="centerServices" checked />
-                <label class="form-check-label" for="centerServices"> Tekerlekli Sandalye Kullanım </label>
+                <input class="form-check-input" type="checkbox" value="Tekerlekli Sandalye Kullanım" name="useChair" id="useChair" checked />
+                <label class="form-check-label" for="useChair"> Tekerlekli Sandalye Kullanım </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Tutunma Kollu Tuvalet"  name="centerServices" id="centerServices" />
-                <label class="form-check-label" for="centerServices"> Tutunma Kollu Tuvalet </label>
+                <input class="form-check-input" type="checkbox" value="Tutunma Kollu Tuvalet"  name="toilet" id="toilet" />
+                <label class="form-check-label" for="toilet"> Tutunma Kollu Tuvalet </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Giriş-Çıkış Alanlarında Klima"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> Giriş-Çıkış Alanlarında Klima </label>
+                <input class="form-check-input" type="checkbox" value="Giriş-Çıkış Alanlarında Klima"  name="enterField"  id="enterField" />
+                <label class="form-check-label" for="enterField"> Giriş-Çıkış Alanlarında Klima </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Hassas Tartı"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> Hassas Tartı </label>
+                <input class="form-check-input" type="checkbox" value="Hassas Tartı"  name="weighter"  id="weighter" />
+                <label class="form-check-label" for="weighter"> Hassas Tartı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Rampalı Hassas Tartı"  name="centerServices"  id="centerServices" checked />
-                <label class="form-check-label" for="centerServices"> Rampalı Hassas Tartı </label>
+                <input class="form-check-input" type="checkbox" value="Rampalı Hassas Tartı"  name="rampScale"  id="rampScale" checked />
+                <label class="form-check-label" for="rampScale"> Rampalı Hassas Tartı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Kişisel Eşyalar İçin Kilitli Dolap"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> Kişisel Eşyalar İçin Kilitli Dolap </label>
+                <input class="form-check-input" type="checkbox" value="Kişisel Eşyalar İçin Kilitli Dolap"  name="itemLock"  id="itemLock" />
+                <label class="form-check-label" for="itemLock"> Kişisel Eşyalar İçin Kilitli Dolap </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Hasta Aracı Otoparkı"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> Hasta Aracı Otoparkı </label>
+                <input class="form-check-input" type="checkbox" value="Hasta Aracı Otoparkı"  name="patientParking"  id="patientParking" />
+                <label class="form-check-label" for="patientParking"> Hasta Aracı Otoparkı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Ambulans Hizmeti"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> Ambulans Hizmeti </label>
+                <input class="form-check-input" type="checkbox" value="Ambulans Hizmeti"  name="ambulance"  id="ambulance" />
+                <label class="form-check-label" for="ambulance"> Ambulans Hizmeti </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="7/24 Ulaşılabilirlik"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> 7/24 Ulaşılabilirlik </label>
+                <input class="form-check-input" type="checkbox" value="7/24 Ulaşılabilirlik"  name="availability"  id="availability" />
+                <label class="form-check-label" for="availability"> 7/24 Ulaşılabilirlik </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="İzole Hasta Odası"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> İzole Hasta Odası </label>
+                <input class="form-check-input" type="checkbox" value="İzole Hasta Odası"  name="patientRoom"  id="patientRoom" />
+                <label class="form-check-label" for="patientRoom"> İzole Hasta Odası </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="El Kumandalı Otomatik Yatak"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> El Kumandalı Otomatik Yatak </label>
+                <input class="form-check-input" type="checkbox" value="El Kumandalı Otomatik Yatak"  name="automaticBed"  id="automaticBed" />
+                <label class="form-check-label" for="automaticBed"> El Kumandalı Otomatik Yatak </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Hava Filtreleme Cihazı"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> Hava Filtreleme Cihazı </label>
+                <input class="form-check-input" type="checkbox" value="Hava Filtreleme Cihazı"  name="filteringDevice"  id="filteringDevice" />
+                <label class="form-check-label" for="filteringDevice"> Hava Filtreleme Cihazı </label>
               </div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Sedyeli Hasta Servisi"  name="centerServices"  id="centerServices" />
-                <label class="form-check-label" for="centerServices"> Sedyeli Hasta Servisi </label>
+                <input class="form-check-input" type="checkbox" value="Sedyeli Hasta Servisi"  name="stretcherPatientService"  id="stretcherPatientService" />
+                <label class="form-check-label" for="stretcherPatientService"> Sedyeli Hasta Servisi </label>
               </div>
             </div>
             <div class="tm-button-next left">
